--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -31,7 +31,22 @@ body {
     width: 30rem;
     height: fit-content;
     align-items: center;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.651);
+    backdrop-filter: blur(30px);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.box-form-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .box-form-input-one, .box-form-input-two {
@@ -71,10 +86,11 @@ body {
 
 .box-form-input-email, .box-form-input-senha {
     width: 100%;
-    height: 1.7rem;
+    height: 2.1rem;
     border: 1px solid black;
     border-radius: 3px;
     padding: 5px;
+    font-size: 15px;
 }
 
 .box-form-checkbox {
@@ -96,6 +112,8 @@ body {
     margin-top: 20px;
     height: 2rem;
     transition: background 1s;
+    font-size: 18px;
+    color: white;
 }
 
 .box-form-button:hover {
