--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -18,15 +18,16 @@
 }
 
 .navbar-menu {
-    list-style: none;
     display: flex;
     gap: 2rem;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 .navbar-menu li {
-    position: relative;
+    display: flex;
+    flex-direction: row;
 }
 
 .navbar-menu li a {
