--- a/src/pages/HomePage/Home.css
+++ b/src/pages/HomePage/Home.css
@@ -1,12 +1,13 @@
 .home {
     text-align: center;
     color: #fff;
+    min-height: 100vh;
+    padding-top: 6rem;
 }
 
-.outdoor {
+.outdor {
     width: 100%;
-    height: auto;
-    max-height: 400px;
+    height: 60vh;
     object-fit: cover;
 }
 
@@ -14,6 +15,8 @@
     display: flex;
     justify-content: space-around;
     margin-top: 2rem;
+    gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .option {
