--- a/src/pages/Cadastro/cadastro.css
+++ b/src/pages/Cadastro/cadastro.css
@@ -51,7 +51,7 @@ form {
     width: 100%;
 }
 
-.box-form-input-one, .box-form-input-two {
+.box-form-input-three, .box-form-input-one, .box-form-input-two {
     display: flex;
     flex-direction: column;
 }
@@ -82,11 +82,11 @@ form {
     margin-top: 2rem;
 }
 
-.box-form-label-email, .box-form-label-senha, .box-form-label-checkbox {
+.box-form-label-usuário, .box-form-label-email, .box-form-label-senha, .box-form-label-checkbox {
     color: var(--secunday-color);
 }
 
-.box-form-input-email, .box-form-input-senha {
+.box-form-input-usuário, .box-form-input-email, .box-form-input-senha {
     width: 100%;
     height: 2.1rem;
     border: 1px solid black;
