--- a/src/component/componentLogin/LoginComponent.css
+++ b/src/component/componentLogin/LoginComponent.css
@@ -98,9 +98,20 @@ form {
 .box-form-checkbox {
     /* border: 1px solid red; */
     display: flex;
+    align-items: center;
+    width: fit-content;
     /* padding: 1px 20px 20px; */
     padding: 10px 0;
     gap: 5px;
+}
+
+.box-form-input-checkbox {
+    width: 14px;
+    height: 14px;
+}
+
+.box-form-label-checkbox {
+    margin: 0;
 }
 
 .box-form-button {
