--- a/src/pages/RoupasInfantis/RoupasInfantis.css
+++ b/src/pages/RoupasInfantis/RoupasInfantis.css
@@ -1,3 +1,7 @@
+/*
+ *   Copyright (c) 2024 
+ *   All rights reserved.
+ */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 .top-section {
     margin-bottom: 500px;
