--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,3 @@
-
 .navbar {
     background-color: #000;
     padding: 1rem 2rem;
@@ -54,6 +53,7 @@
     transform: scale(1.1);
 }
 
+/* Menu hambúrguer para telas pequenas */
 @media (max-width: 768px) {
     .navbar-menu {
         display: none;
