--- a/src/components/carrinho/Carrinho.css
+++ b/src/components/carrinho/Carrinho.css
@@ -21,7 +21,7 @@
 .box-carrinho-produtos {
     background-color: rgba(255, 255, 255, 0.5);
     /* filter: blur(8px); */
-    border-radius: 12px;
+    border-radius: 16px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -30,6 +30,7 @@
     margin-bottom: 1rem;
     padding-bottom: 1rem;
     gap: 1rem;
+    position: relative;
     /* margin: 1.5rem; */
 }
 
@@ -57,9 +58,14 @@
     gap: 2rem;
 }
 
-.input-comprar, .input-excluir {
+.box-carrinho-produtos-bot input {
+    border-radius: 20px;
     cursor: pointer;
-    width: 5rem;
+    width: fit-content;
+    height: 2rem;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .box-carrinho-quantidade {
@@ -74,5 +80,38 @@
 }
 
 .box-carrinho-aum-dim button{
+    cursor: pointer;
     width: 2rem;
+}
+
+.carrinho-actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.carrinho-actions p {
+    color: black;
+}
+
+.carrinho-actions button {
+    cursor: pointer;
+    width: 6rem;
+    height: 3rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgb(255, 255, 255);
+}
+
+.box-valor-total {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgb(255, 255, 255);
+    width: 6rem;
+    height: 3rem;
+    font-size: 14px;
+    text-align: center;
 }
