--- a/src/components/pedido/PedidosComponent.css
+++ b/src/components/pedido/PedidosComponent.css
@@ -13,17 +13,15 @@
 }
 
 .box-pedidos::-webkit-scrollbar-thumb {
-    background-color: #888; /* Cor do polegar */
+    background-color: #888;
     border-radius: 10px;
 }
 
-/* Estilizando a trilha da barra de rolagem */
 .box-pedidos::-webkit-scrollbar-track {
-    background-color: #f1f1f1; /* Cor da trilha */
+    background-color: #f1f1f1;
     border-radius: 10px;
 }
 
-/* Efeito de hover no polegar da barra de rolagem */
 .box-pedidos::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
@@ -35,7 +33,9 @@
 
 .box-pedidos-list {
     display: flex;
-    /* border: 1px solid blue; */
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    box-shadow: 4px 4px 8px black;
     justify-content: space-around;
     margin-bottom: 30px;
     align-items: center;
